# Duxo

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build-host.yml  deploy-pages.yml  firestore-backup.yml  release.yml  rollback.yml
docs/: data-schema.md  minversion.json  protocol-versions.md  update.json
firebase/: database.rules.json  firestore.rules
host-agent/src-tauri/: Cargo.toml  tauri.conf.json
host-agent/src-tauri/html/: allow-deny.html  code-display.html
host-agent/src-tauri/src/: audit.rs  backend.rs  capture_linux_x11.rs  capture_windows.rs  crash_recovery.rs  firebase.rs  input_linux_x11.rs  input_windows.rs  main.rs  security.rs  session.rs  tray.rs  types.rs  webrtc_host.rs  windows.rs
host-agent/src-tauri/src/html/: allow-deny.html  code-display.html
infrastructure/coturn/: setup.md
measured/: index.html  package-lock.json  package.json
measured/src/: App.tsx  index.css
measured/src/components/: GridBackground.tsx  HeroSection.tsx  MobileMenu.tsx  Navigation.tsx  SpotlightReveal.tsx
measured/src/hooks/: useBodyLock.ts  useCursorPosition.ts
scripts/: updater-keygen.sh
shared/: types.ts
viewer/: .env.example  .eslintrc.json  .gitignore  firestore.indexes.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
viewer/app/: global-error.tsx  layout.tsx  page.tsx
viewer/app/__tests__/: Button.test.tsx  CodeInput.test.tsx  utils.test.ts
viewer/app/blog/: page.tsx
viewer/app/changelog/: page.tsx
viewer/app/dashboard/: page.tsx
viewer/app/docs/: page.tsx
viewer/app/download/: page.tsx
viewer/app/history/: page.tsx
viewer/app/login/: page.tsx
viewer/app/measured/: layout.tsx  page.tsx
viewer/app/session/: page.tsx
viewer/app/settings/: page.tsx
viewer/app/verify-2fa/: page.tsx
viewer/components/: AnimatedCounter.tsx  Button.tsx  Card.tsx  CodeInput.tsx  ErrorBoundary.tsx  Footer.tsx  ImageWithBasePath.tsx  Input.tsx  Navbar.tsx  ScrollReveal.tsx  TOTPSetup.tsx  WebAuthnSetup.tsx  WebVitals.tsx
viewer/components/measured/: GridBackground.tsx  HeroSection.tsx  MobileMenu.tsx  Navigation.tsx  SpotlightReveal.tsx  (+2 more)
viewer/e2e/: download.spec.ts  landing.spec.ts  login.spec.ts  static-pages.spec.ts
viewer/hooks/: useScrollReveal.ts
viewer/lib/: env.ts  firebase.ts  reportWebVitals.ts  sanitize.ts  totp.ts  utils.ts  webauthn.ts  webrtc.ts
viewer/public/: sw.js
viewer/styles/: globals.css
(+1 files in other folders)
